--- a/index.html
+++ b/index.html
@@ -138,7 +138,14 @@ body{
   
   btn_clr.onclick()
   
-  addBtn('Exit') 
+  addBtn('Exit')
+
+windows.ondblclick=function (){
+
+return false
+
+	
+}
  
   
   let p
