--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
 <link href="./styles.css" rel="stylesheet">
+<meta name="author" content="Fares-Abousaleh">
 </head>
 
 <body>
-
+<h1>Mini Music Editor</h1>
+<hr><br>
 <table id="BLOCKWIND">
 	<tr>
 		<td>  notes: </td>
@@ -32,7 +34,7 @@
 	
 </table>
 
-<br><br>
+<br><hr><br>
 <table id="BLOCKSTR">
 	<tr>
 		<td>  notes: </td>
@@ -51,7 +53,8 @@
 	</tr>
 	
 </table>
-
+<br><hr><br>
+time unit: <input class="INPUT" style="width:6rem;height:2rem;" type="text" value="0.1" id="tunit_inp"/> 
 </body>
 <script src="./generalTools.js"></script>
 <script src="./audio.js"></script>
