--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<tr>
 		<td></td>
 		<td>
-			<input class="BTN" type="button" value="run" onclick="run(snd2,ins3,inp2);" />  
+			<input class="BTN" type="button" value="run" onclick="run(snd2,ins2,inp2);" />  
 			<input class="BTN" type="button" value="replay" onclick="playSnd(snd2);"/>
 			<input class="BTN" type="button" value="stop" onclick="stopSnd();" />
 			<input class="BTN" type="button" value="save" onclick="saveWave('snd2.wav',snd2,rate);" />
@@ -55,6 +55,30 @@
 	
 </table>
 <br><hr><br>
+
+
+<table id="BLOCKDRM">
+	<tr>
+		<td>  notes: </td>
+		<td><input class="INPUT" type="text" value="" id="inp3" /> 
+		</td>
+	</tr>
+	
+	<tr>
+		<td></td>
+		<td>
+			<input class="BTN" type="button" value="run" onclick="run(snd3,ins3,inp3);" />  
+			<input class="BTN" type="button" value="replay" onclick="playSnd(snd3);"/>
+			<input class="BTN" type="button" value="stop" onclick="stopSnd();" />
+			<input class="BTN" type="button" value="save" onclick="saveWave('snd3.wav',snd3,rate);" />
+		</td>  
+	</tr>
+	
+	
+</table>
+<br><hr><br>
+
+
 time unit: <input class="INPUT" style="width:6rem;height:2rem;" type="text" value="0.17" id="tunit_inp"/> 
 </body>
 <script src="./generalTools.js"></script>
