--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="Fares-Abousaleh">
 </head>
 
-<body>
+<body autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
 <h1>Mini Music Editor</h1>
 <hr><br>
 <table id="BLOCKWIND">
