--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 			<input class="BTN" type="button" value="replay" onclick="playSnd(snd3);"/>
 			<input class="BTN" type="button" value="stop" onclick="stopSnd();" />
 			<input class="BTN" type="button" value="export" onclick="saveWave('snd3.wav',snd3,rate);" />
+			<input class="BTN" type="button" value="random drumline" onclick="inp3.value=somePercussions[rndInt(0,somePercussions.length)];" />
 		</td>  
 	</tr>
 	
