--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 <head>
 
 <style>
-	body{
-		 
+
+	body{	 
 		text-align:center;
-		background-image: linear-gradient( 35deg, #00f   ,#000 );
+		background-image: linear-gradient( 45deg, #004   ,#000 );
 		color:#ddd;
 		display:block;
-		font-size:17pt;
 		user-select:none;
-	 }
+	}
 	 
 	h1{
-		font-size:1.5rem;
+		font-size:2em;
 	}
 	 
 	td{
@@ -27,22 +26,22 @@
 		white-space:pre;
 		overflow-wrap:normal;
 		width:100%;
-		height:15rem;
-		background-image: linear-gradient( 35deg, #008, #014 ,#000 );
-		color:#eef;
+		height:15em;
+		background-image: linear-gradient( 35deg, #005  ,#000 );
+		color:#ffc;
 		display:block;
-		font-size:1rem;
+		font-size:1.2em;
 	 }
 	 
 	input{
-		font-size:1rem;
+		font-size:1em;
 		width:100%;
 		background-image: linear-gradient( 35deg, #008, #014 ,#000 );
 		color:#eef;
-		margin-top:0.062rem;
-		margin-bottom:0.062rem;
-		padding-top:0.2rem;
-		padding-bottom:0.2rem;
+		margin-top:0.062em;
+		margin-bottom:0.062em;
+		padding-top:0.2em;
+		padding-bottom:0.2em;
 	 }	
 	 
 	 table{
@@ -84,6 +83,5 @@
 <script src= "./audio.js">        </script>
 <script src= "./filters.js">      </script>
 <script src= "./music.js">        </script>
-<script src= "./score.js">        </script>
 <script src= "./main.js">       </script>
 </html>
